# LabIA

./: CMakeLists.txt  README.md  compile.sh
src/: brief.cpp  draw_corners.cpp  fast.cpp  globals.h  harris.cpp  hog.cpp  main.cpp  make_fast.cpp  make_harris.cpp  make_match_fast.cpp  make_match_harris.cpp  make_match_shitomasi.cpp  make_orb.cpp  make_panorama.cpp  make_shitomasi.cpp  make_sift.cpp  patch_descriptors.cpp  ransac.cpp  shi_tomasi.cpp  utils.cpp
